Fix incorrect PWA window/tab closing on uninstallation

This CL ensures the TabHelper of a PWA WebContents is updated to indicate
whether it has it's own "extension" window or not to ensure it gets
cleaned up appropriately on uninstall.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354491&signed_aid=mELqu3AB-QBQpk1qojP7qg==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354490&signed_aid=4RqFYkoMkmsndSMnrq5inA==&inline=1

Bug: 877009
Change-Id: I81e7888260a40df68f5e9a5443ea2a815b8a686f
Reviewed-on: https://chromium-review.googlesource.com/1186388
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585732}
Former-commit-id: 00eb4b9cc96f6fae7e923eece76321d3104f88fe