chrome/browser/ui/browser_commands.h
@@ -146,7 +146,9 @@ void ToggleFullscreenMode(Browser* browser);
 void ClearCache(Browser* browser);
 bool IsDebuggerAttachedToCurrentTab(Browser* browser);
 void CopyURL(Browser* browser);
-void OpenInChrome(Browser* browser);
+// Moves the WebContents of a hosted app Browser to a tabbed Browser. Returns
+// the tabbed Browser.
+Browser* OpenInChrome(Browser* hosted_app_browser);
 bool CanViewSource(const Browser* browser);
 #if defined(OS_WIN) || (defined(OS_LINUX) && !defined(OS_CHROMEOS))
 void ToggleConfirmToQuitOption(Browser* browser);
